--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,9 @@
 
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    <!-- Traffic tracking via Umami -->
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="15fea78b-f6d0-41ea-a706-001d433d73e0"></script>
 </head>
 <body class="bg-light">
 
