--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
         <div class="col-12 col-xl-auto">
             <div class="table-responsive">
                 <table class="table table-bordered table-hover w-auto mx-auto">
-                    <caption style="caption-side: top; font-size: 1.2rem; font-weight: bold; margin-bottom: 10px;" class="text-center text-dark">
+                    <caption style="caption-side: top; font-size: 1.2rem; margin-bottom: 10px;" class="text-center text-dark">
                         This years teams
                     </caption>    
                     <thead class="table-primary small">
@@ -73,7 +73,7 @@
         <div class="col-12 col-xl-auto">
             <div class="table-responsive">
                 <table class="table table-bordered table-hover w-auto mx-auto">
-                    <caption style="caption-side: top; font-size: 1.2rem; font-weight: bold; margin-bottom: 10px;" class="text-center text-dark">
+                    <caption style="caption-side: top; font-size: 1.2rem; margin-bottom: 10px;" class="text-center text-dark">
                         Overall teams
                     </caption>    
                     <thead class="table-primary small">
