--- a/static/styles.css
+++ b/static/styles.css
@@ -117,6 +117,11 @@ nav {
     background-color: #f8f9fa;  /* Optional: gives a slightly different background for the separation */
 }
 
+.row-warning {
+    border-left: 5px solid #0d6efd !important; /* Matches Bootstrap Blue */
+    background-color: #f8f9fa; /* Very subtle off-white/gray */
+}
+
 /*
 table {
     width: auto;
