--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="canonical" href="https://cyclingdatahub.com{{ request.path }}">
+
     <title>{% block title %}MFCC Velogames{% endblock %}</title>
 
     <!-- Bootstrap CSS -->
