--- a/templates/stage.html
+++ b/templates/stage.html
@@ -17,8 +17,13 @@
         </div>
 
         <div class="order-3 order-md-2 col-12 col-md-6 text-center">
-            <h1 class="h3 fw-bold text-capitalize mb-0">{{ stage_name }}</h1>
-            <p class="text-muted small mb-0">{{ race_name }} - {{ stage_date }}</p>
+            <h1 class="h4 fw-bold text-capitalize mb-0">{{ stage_name }}</h1>
+            <div class="h4 fw-bold text-capitalize mb-0">
+                <a href="{{ url_for('main.race', race_id=race_id) }}" class="text-decoration-none">
+                    {{ race_name }}
+                </a>
+            </div>
+            <p class="text-muted small mb-0">{{ stage_date }}</p>
         </div>
 
         <div class="order-2 col-6 col-md-3 text-end mb-2 mb-md-0">
