--- a/templates/base.html
+++ b/templates/base.html
@@ -85,7 +85,7 @@
 
 
     <footer class="text-center text-muted py-3 mt-5 border-top">
-        &copy; {{ current_year }} Velogames by MFCC
+        &copy; {{ current_year }} MFCC Dashboard by Juraj P
     </footer>
 </body>
 </html>
