--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
             <div class="table-responsive">
                 <table class="table table-bordered table-hover w-auto mx-auto">
                     <caption style="caption-side: top; font-size: 1.2rem; margin-bottom: 10px;" class="text-center text-dark">
-                        This years teams
+                        This season teams
                     </caption>    
                     <thead class="table-primary small">
                         <tr>
@@ -76,11 +76,11 @@
             <div class="table-responsive">
                 <table class="table table-bordered table-hover w-auto mx-auto">
                     <caption style="caption-side: top; font-size: 1.2rem; margin-bottom: 10px;" class="text-center text-dark">
-                        Overall teams
+                        This season races
                     </caption>    
                     <thead class="table-primary small">
                         <tr>
-                            {% for column in columns_2 %}
+                            {% for column in columns_3 %}
                                 <th class="text-nowrap fw-normal">{{ column }}</th>
                             {% endfor %}
                         </tr>
